src-tauri/check_output.txt
    Checking ciel v0.1.0 (D:\projects\ciel\src-tauri)
warning: variable does not need to be mutable
   --> src\video.rs:222:13
    |
222 |         let mut cmd = bin_resolver::resolve_bin(&app_clone, Binary::YtDlp);
    |             ----^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0382]: use of moved value: `cmd`
   --> src\video.rs:229:13
    |
222 |         let mut cmd = bin_resolver::resolve_bin(&app_clone, Binary::YtDlp);
    |             ------- move occurs because `cmd` has type `tauri_plugin_shell::process::Command`, which does not implement the `Copy` trait
223 |         cmd.arg("-f")
    |             --------- `cmd` moved due to this method call
...
229 |             cmd.arg("--ratelimit").arg(format!("{}", speed_limit));
    |             ^^^ value used here after move
    |
note: `tauri_plugin_shell::process::Command::arg` takes ownership of the receiver `self`, which moves `cmd`
   --> C:\Users\shubh\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-plugin-shell-2.3.3\src\process\mod.rs:174:37
    |
174 |     pub fn arg<S: AsRef<OsStr>>(mut self, arg: S) -> Self {
    |                                     ^^^^

error[E0382]: use of moved value: `cmd`
   --> src\video.rs:232:35
    |
222 |         let mut cmd = bin_resolver::resolve_bin(&app_clone, Binary::YtDlp);
    |             ------- move occurs because `cmd` has type `tauri_plugin_shell::process::Command`, which does not implement the `Copy` trait
223 |         cmd.arg("-f")
    |             --------- `cmd` moved due to this method call
...
229 |             cmd.arg("--ratelimit").arg(format!("{}", speed_limit));
    |                 ------------------ `cmd` moved due to this method call
...
232 |         let (mut events, child) = cmd.arg("--concurrent-fragments")
    |                                   ^^^ value used here after move

For more information about this error, try `rustc --explain E0382`.
warning: `ciel` (lib) generated 1 warning
error: could not compile `ciel` (lib) due to 2 previous errors; 1 warning emitted
